# skelex

./: .clang-format  .doxygen  CMakeLists.txt  LICENSE  Makefile  README.md  apt.msys  apt.txt
doc/: CLI.md  DSL.md  doxygen.md  index.md  О проекте.md  интерпретатор байт-кода.md  создание файловой структуры проекта.md  установка ПО.md
docs/: README_8md.html  _xD0_x9E_01_xD0_xBF_xD1_x80_xD0_xBE_xD0_xB5_xD0_xBA_xD1_x82_xD0_xB5_8md.html  _xD0_xBE_xD0_xB1_xD1_x89_xD0_xB8_xD0_xB5_01_xD0_xBF_xD1_x80_xD0_xB8_xD0_xBD_xD1_x86_xD0_xB8_xD0_97c72b51fc5a0e35edfcd609b6dbbeff.html  _xD1_x83_xD1_x81_xD1_x82_xD0_xB0_xD0_xBD_xD0_xBE_xD0_xB2_xD0_xBA_xD0_xB0_01_xD0_x9F_xD0_x9E_8md.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  group__args.html  group__parser.html  index.html  index_8md.html  install_8md.html  md_doc_obsidian_index.html  md_doc_obsidian_intro__xD0_x9E__xD0_xBF_xD1_x80_xD0_xBE_xD0_xB5_xD0_xBA_xD1_x82_xD0_xB5.html  md_doc_obsidian_intro__xD0_xBE_xD0_xB1_xD1_x89_xD0_xB8_xD0_xB5__xD0_xBF_xD1_x80_xD0_xB8_xD0_xBD_5d9f56cdf51f64597ca3651f610616fb.html  md_doc_obsidian_intro__xD1_x83_xD1_x81_xD1_x82_xD0_xB0_xD0_xBD_xD0_xBE_xD0_xB2_xD0_xBA_xD0_xB0__xD0_x9F_xD0_x9E.html  md_doc_obsidian_make_install.html  modules.html  pages.html  skelex_8cpp.html  skelex_8cpp__incl.map  skelex_8cpp__incl.md5  skelex_8hpp.html  skelex_8hpp__dep__incl.map  skelex_8hpp__dep__incl.md5  (+9 more)
(+141 files in other folders)
